# toney_music

./: .gitignore  .metadata  README-zh_CN.md  README.md  l10n.yaml  package-lock.json  pubspec.yaml  script.scpt
.clang-module-cache/2BUIZFMLAYTJW/: SwiftShims-2IMTS4WWRU7VJ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm
.clang-module-cache/3SV7GZ9T7GHYA/: SwiftShims-2IMTS4WWRU7VJ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
example/: example.json  music_metadata_example.dart
ios/Runner/: AppDelegate.swift  AudioEnginePlugin.swift  Info.plist  MoodEnginePlugin.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart  toney_core.dart
lib/core/: audio_controller.dart  favorites_controller.dart  playback_view_model.dart
lib/core/agent/: app_tool.dart  app_tool_models.dart  app_tool_models.g.dart  app_tool_spec.dart  app_util.dart  dto.dart  dto.g.dart  for_you_generator.dart  library_agent.dart  liteagent_util.dart  playback_agent.dart  playlist_agent.dart  song_mapper.dart
lib/core/agent/prompts/: for_you_prompt.dart
lib/core/localization/: app_language.dart  locale_controller.dart
lib/core/media/: audio_formats.dart  song_metadata_util.dart
lib/core/media_session/: media_session.dart
lib/core/model/: chat_message.dart  chat_message.g.dart  playback_mode.dart  playback_track.dart  playback_view_model.dart  song_metadata.dart
lib/core/mood/: mood_engine.dart
lib/core/playback/: engine_track_models.dart  playback_helper.dart  playback_track.dart
lib/core/remote/exceptions/: protocol_exceptions.dart
lib/core/remote/models/: connection_config.dart  connection_status.dart  protocol_type.dart  remote_file_item.dart
lib/core/remote/services/: cache_manager.dart  client_factory.dart  config_manager.dart  ftp_client.dart  remote_file_client.dart  samba_client.dart  sftp_client.dart  webdav_client.dart
lib/core/storage/: chat_history_storage.dart  favorites_storage.dart  for_you_playlist_storage.dart  language_preference_storage.dart  library_storage.dart  liteagent_config_storage.dart  playback_settings_storage.dart  playback_state_storage.dart  playlist_storage.dart  security_scoped_bookmarks.dart  theme_preference_storage.dart
lib/core/theme/: app_theme_mode.dart  theme_controller.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/ui/ios/: ios_app.dart  ios_player_screen.dart
lib/ui/macos/: macos_app.dart  macos_colors.dart  macos_player_screen.dart
lib/ui/macos/models/: media_models.dart  nav_section.dart
lib/ui/macos/sidebar/: macos_sidebar.dart
lib/ui/macos/theme/: macos_dark_colors.dart  macos_light_colors.dart
lib/ui/shared/: typography.dart
lib/ui/windows/: windows_app.dart  windows_frame.dart
libs/AudioEngineAndroid/: CMakeLists.txt  README.md
libs/AudioEngineAndroid/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  AudioEngineJNI.cpp
libs/AudioEngineSwift/: Package.resolved  Package.swift
libs/AudioEngineSwift/FFmpeg.xcframework/: Info.plist
libs/AudioEngineWindows/: CMakeLists.txt
libs/AudioEngineWindows/include/AudioEngineWindows/: AudioEngineWindows.h
libs/AudioEngineWindows/src/: AudioEngineWindows.cpp
libs/MediaSessionWindows/: CMakeLists.txt
libs/MediaSessionWindows/include/MediaSessionWindows/: plugin.h
libs/MediaSessionWindows/src/: plugin.cpp
libs/MoodEngineAndroid/: README.md
libs/MoodEngineSwift/: Package.swift
libs/MoodEngineWindows/: CMakeLists.txt
libs/MoodEngineWindows/include/MoodEngineWindows/: MoodEngineWindows.h
libs/MoodEngineWindows/src/: MoodEngineWindows.cpp
macos/Runner/: AppDelegate.swift  AudioEngineBridge.swift  AudioEnginePlugin.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  MoodEnginePlugin.swift  SecurityScopedAccessPlugin.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig  Release.xcconfig
test/core/: audio_controller_test.dart
tool/: build_dmg.sh  build_windows_installer.ps1  export_opentool.dart
windows/: CMakeLists.txt
windows/installer/: toney.iss
windows/runner/: CMakeLists.txt  Runner.rc  audio_engine_channel.cpp  audio_engine_channel.h  flutter_window.cpp  main.cpp  mood_engine_channel.cpp  mood_engine_channel.h  win32_window.cpp
(+40 files in other folders)
